commit 11c61093d2ffbe6252098f3e6a6915a55a143cd6
Author: m1k3s <pbrane0@gmail.com>
Date:   Sat Jan 25 10:34:10 2014 -0500

    updated ChangeLog

commit 6f731d86f4859a5ce2ea2f8687dd1c2480d8cf7d
Author: m1k3s <pbrane0@gmail.com>
Date:   Fri Jan 24 17:38:54 2014 -0500

    changed playerView::get_IP to use already existing
    playerView::find_player. changed playerView sort function; if the
    scores are equal use the player id instead. This prevents equal
    score lines from jumping around.

commit 2a87a625bb8ec129c057adbba2c0914e05fa0822
Author: m1k3s <pbrane0@gmail.com>
Date:   Mon Jan 20 19:32:40 2014 -0500

    connection dialog now remembers the last server you connected to.

commit c5b29a234df0a20002f92227339186d02531d86b
Author: m1k3s <pbrane0@gmail.com>
Date:   Sun Jan 19 13:51:46 2014 -0500

    added an icon to the connect dialog server entry that when clicked
    will delete that entry. Needed a way to remove entries from the
    server MRU list.

commit 42071197e2eeb60f67592fcf9a75c36a75c5438b
Author: m1k3s <pbrane0@gmail.com>
Date:   Sun Jan 19 11:44:04 2014 -0500

    added a timeout of 10 seconds to the connection phase.

commit 83b4cd0a8dc5962811349aa1d3edc3623bb6c535
Author: m1k3s <pbrane0@gmail.com>
Date:   Sat Jan 18 20:16:16 2014 -0500

    more work on the network code.

commit 8f969654d647c8ff35d9d6885bcb812097669e9f
Author: m1k3s <pbrane0@gmail.com>
Date:   Sat Jan 18 16:13:32 2014 -0500

    update network code (gSocket) to remove any deprecated functions. Also
    use getaddrinfo to it's full potential. These changes should help
    with IPV6 migration should it be needed.

commit aece73ccc15b05b835b58d7596037f1895d0751c
Author: m1k3s <pbrane0@gmail.com>
Date:   Sat Jan 18 11:43:41 2014 -0500

    remove UDP code and deprecated message handler code.

commit f1f1f176a0c840049fc630971853baa3a581ab2e
Author: m1k3s <pbrane0@gmail.com>
Date:   Sat Jan 18 10:49:51 2014 -0500
